fix position of login buttons on mobile

--- a/css/login.css
+++ b/css/login.css
@@ -61,4 +61,8 @@
     top: 5% !important;
     width: 85%;
   }
+  .signup {
+    float: none;
+    margin-top: 1rem;
+  }
 }
